# docs/swagger.json
@@ -9,39 +9,7 @@
     "host": "localhost:9888",
     "basePath": "/api/v1",
     "paths": {
-        "/example/SingIn": {
-            "post": {
-                "description": "User login to the system by mail, password, verification code",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "auth"
-                ],
-                "summary": "User login",
-                "operationId": "login",
-                "parameters": [
-                    {
-                        "description": " login user",
-                        "name": "input",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/controllers.SingIninput"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "jwt",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            }
-        },
-        "/example/SingUp": {
+        "/example/SignUp": {
             "post": {
                 "description": "register a new user",
                 "consumes": [
@@ -61,7 +29,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/controllers.SingUpinput"
+                            "$ref": "#/definitions/controllers.SignUpInput"
                         }
                     }
                 ],
@@ -69,7 +37,7 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/controllers.SingUpinput"
+                            "$ref": "#/definitions/controllers.SignUpInput"
                         }
                     },
                     "400": {
@@ -77,6 +45,61 @@
                     },
                     "500": {
                         "description": "user registration failed"
+                    }
+                }
+            }
+        },
+        "/example/SingIn": {
+            "post": {
+                "description": "User login to the system by mail, password, verification code",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "auth"
+                ],
+                "summary": "User login",
+                "operationId": "login",
+                "parameters": [
+                    {
+                        "description": " login user",
+                        "name": "input",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/controllers.SignInInput"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "jwt",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/example/helloworld": {
+            "get": {
+                "description": "do ping",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "example"
+                ],
+                "summary": "ping example",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
                     }
                 }
             }
@@ -105,7 +128,7 @@
         }
     },
     "definitions": {
-        "controllers.SingIninput": {
+        "controllers.SignInInput": {
             "type": "object",
             "required": [
                 "email",
@@ -123,7 +146,7 @@
                 }
             }
         },
-        "controllers.SingUpinput": {
+        "controllers.SignUpInput": {
             "type": "object",
             "required": [
                 "email",
@@ -131,6 +154,7 @@
             ],
             "properties": {
                 "email": {
+                    "description": "Username          string `swaggerignore:\"true\" json:\"username\" `",
                     "type": "string"
                 },
                 "password": {
@@ -163,13 +187,6 @@
                     "type": "string"
                 }
             }
-        }
-    },
-    "securityDefinitions": {
-        "ApiKeyAuth": {
-            "type": "apiKey",
-            "name": "Autorization",
-            "in": "header"
         }
     }
 }
